limite 4 user 1 connection

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -71,7 +71,11 @@ FACEBOOK_APP_SECRET_KEY=3266214132b8c98ac59f3e957a5efeaaa13500
 WEB_VERSION
 
 # Customizar opções do pool de conexões DB
-POSTGRES_POOL_MAX
-POSTGRES_POOL_MIN
-POSTGRES_POOL_ACQUIRE
-POSTGRES_POOL_IDLE
+POSTGRES_POOL_MAX=100
+POSTGRES_POOL_MIN=10
+POSTGRES_POOL_ACQUIRE=30000
+POSTGRES_POOL_IDLE=10000
+
+# Limitar Uso do Izing Usuario e Conexões
+USER_LIMIT=4
+CONNECTIONS_LIMIT=1
